docker/iptables.rules
# Generated by iptables-save v1.8.7 on Sat Dec  3 07:58:29 2022
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:P_MARK - [0:0]
:UDP_REDIR - [0:0]
-A PREROUTING -j UDP_REDIR
-A OUTPUT -j P_MARK
-A P_MARK -d 127.0.0.1/32 -j RETURN
-A P_MARK -d 192.168.0.0/16 -j RETURN
-A P_MARK -d 255.255.255.255/32 -j RETURN
-A P_MARK -p udp -j MARK --set-xmark 0x1/0xffffffff
-A UDP_REDIR -d 127.0.0.1/32 -j RETURN
-A UDP_REDIR -d 192.168.0.0/16 -j RETURN
-A UDP_REDIR -d 255.255.255.255/32 -j RETURN
COMMIT
# Completed on Sat Dec  3 07:58:29 2022
# Generated by iptables-save v1.8.7 on Sat Dec  3 07:58:29 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:TCP_REDIR - [0:0]
-A PREROUTING -j TCP_REDIR
-A TCP_REDIR -d 127.0.0.0/8 -j RETURN
-A TCP_REDIR -d 192.168.0.0/16 -j RETURN
-A TCP_REDIR -p tcp -j REDIRECT --to-ports 7892
COMMIT
# Completed on Sat Dec  3 07:58:29 2022
